--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,5 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+/[[]OLC1]Proyecto1/nbproject/private/
+/[[]OLC1]Proyecto1/build/
