--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,8 @@
 hs_err_pid*
 /[[]OLC1]Proyecto1/nbproject/private/
 /[[]OLC1]Proyecto1/build/
+
+#Agregadas por JA
+/[[]OLC1]Proyecto1/nbproject/
+/[[]OLC1]Proyecto1/build.xml
+/[[]OLC1]Proyecto1/manifest.mf
