--- a/[OLC1]Proyecto1/nbproject/project.properties
+++ b/[OLC1]Proyecto1/nbproject/project.properties
@@ -27,9 +27,15 @@ dist.dir=dist
 dist.jar=${dist.dir}/_OLC1_Proyecto1.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.java-cup-11b-runtime.jar=java-cup-11b-runtime.jar
+file.reference.java-cup-11b.jar=java-cup-11b.jar
+file.reference.jflex-1.6.1.jar=jflex-1.6.1.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.java-cup-11b.jar}:\
+    ${file.reference.java-cup-11b-runtime.jar}:\
+    ${file.reference.jflex-1.6.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -54,7 +60,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=Proyecto1
+main.class=Proyecto1.Proyecto1
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
